<resources>
    <string name="app_name">PedalFit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="nav_home">Home</string>
    <string name="nav_rides">Rides</string>
    <string name="nav_payment">Payment History</string>
    <string name="nav_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="ride_history">Ride History</string>
    <string name="rides">Ride History</string>
    <string name="payment_history">Payment Settings</string>
    <string name="nav_onlinesupport">Online Support</string>
    <string name="online_support">Online Support</string>
    <string name="nav_logout">Logout</string>
    <string name="logout">Logout</string>
    <string name="text">Light Mode</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>


</resources>