<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_rides"
            android:icon="@drawable/ic_rides"
            android:title="@string/rides" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_paymenthistory"
            android:title="@string/payment_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_onlinesupport"
            android:icon="@drawable/ic_onlinesupport"
            android:title="@string/online_support" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>